Add modal timer functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Собираем ПК</title>
-    <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
 </head>
 
 <body>
@@ -268,6 +267,9 @@
 
     <form action="#" class="modal block-center">
         <div class="modal__inner">
+            <div class="modal__close">
+                <img src="/img/4115230-cancel-close-cross-delete_114048.svg" alt="">
+            </div>
             <div class="modal__header">Заявка на сборку ПК</div>
             <div class="modal__subheader">Мы свяжемся с вами, чтобы обсудить детали заказа</div>
             <div class="modal__elements block-center-horis">
@@ -287,6 +289,7 @@
     <script src="./js/accordeon.js"></script>
     <script src="/js/modal.js"></script>
     <script src="/js/smoothScroll.js"></script>
+    <script src="/js/timer.js"></script>
 </body>
 
 </html>
