--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="modal__input">
                     <input type="email" class="modal__input">
                 </div>
-                <button type="button" class="button modal__button">Отправить</button>
+                <button type="submit" class="button modal__button">Отправить</button>
             </div>
         </div>
     </form>
@@ -290,6 +290,7 @@
     <script src="/js/modal.js"></script>
     <script src="/js/smoothScroll.js"></script>
     <script src="/js/timer.js"></script>
+    <script src="/js/sendForm.js"></script>
 </body>
 
 </html>
